main/static/css/custom.css
.flexbox {
    display: flex;
}

.wrap {
    flex-wrap: wrap;
}

body {
    background-color: #e6fcf6;
}

/* Navbar normal */
.navbar-custom {
    box-shadow: inset 0 0 0 1000px rgba(105, 148, 155, 0.52);
}

/* Navbar curta */
nav.navbar.shrink {
    background-color: #91c0c7;
    border-bottom: 5px double #fff;
}

/* Letras navbar */
.navbar-custom .navbar > li > a {
    color: #fff;
}

/* Letras na pagina */
h1, h2, h3, h4, h5, h6, 
.owl-next i, .owl-prev i,
a:hover,
.side-label {
    color: #376878;
}

/* Fonte de titulos */
h1, h2 {
    font-family: "Great Vibes", cursive;
}

h3 {
    font-weight: 700;
    font-size: 50px;
    letter-spacing: 1px;
    line-height: 55px;
    margin-bottom: 40px;
}

h4 {
    font-size: 35px;
    font-family: 'Lora', serif;
    font-weight: 500;
    letter-spacing: 0.3px;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    margin-bottom: 30px;
    margin-top: 0;
}

h5.subtitle {
    margin-top: 60px;
    font-size: 28px;
}

@media (max-width: 600px) {
    h5.subtitle {
        margin-top: 35px;
        font-size: 13px;
    }
}

/* Corações */
.hr, i, a {
    color: #7fbba3;
}

/* Butões inativos */
.nav.nav-tabs > li.active > a {
    background-color: #376878;
    color: #fff;
}
.nav.nav-tabs > li.active > a:hover {
    background-color: #7fbba3;
    cursor: pointer;
}
.nav.nav-tabs > li > a {
    background-color: #7fbba3;
    color: #fff;
}
.nav.nav-tabs > li > a:hover {
    background-color: #376878;
    cursor: pointer;
}

/* Circulos á volta das imagens */
.img-circle {
    border-color: #e6fcf6;
}

/* Imagens em roda */
#about .img-container {
    height: 267px;
    width: 267px;
    display: flex;
    justify-content: center;
    overflow: hidden;
    border: 5px solid #e6fcf6;
    margin: 0 auto;
    border-radius: 50%;
}

#about .img-container > img {
    height: 100%;
    max-width: none;
    margin: 0 auto;
    border: none;
    border-radius: 0;
}

/* Secção do queridos convidados */

.container-queridos-convidados {
    margin: 0;
    width: auto;
}

.queridos-convidados-body {
    align-items: center;
    justify-content: space-between;
    flex-wrap: nowrap;
}

.couple-person, .invite-text {
    width: 100%;
    margin: 20px;
}

.invite-text {
    font-family: 'Montserrat', sans-serif;
    font-size: 23px;
    text-align: center;
    min-width: 350px;
    padding: 0px 200px;
}

@media (max-width: 1100px) {
    .queridos-convidados-body {
        flex-wrap: wrap;
    }
}

@media (max-width: 350px) {
    .invite-text {
        min-width: auto;
    }
}

/* O Evento */

h4.date {
    margin-bottom: 10px;
}

.width-full {
    width: 100%;
}

/* RSVP */

#rsvp .img-container {
    width: 430px;
    height: 552px;
    transform: rotate(-4deg);
    margin-top: 50px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, .25);
    border: 8px solid #fff;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

#rsvp .img-container > img {
    transform: none;
    margin: 0;
    box-shadow: none;
    border: none;
    max-width: none;
    height: 100%;
    width: auto;
}

@media (max-width: 1200px) {
    #rsvp .img-container {
        margin: 40px auto;
    }
}

@media (max-width: 535px) {
    #rsvp .img-container {
        width: 100%;
    }
}

.side-label {
    font-family: "Lora", serif;
}

.btn {
    background-image: url('../img/ornaments/serenity/btn.png');
    background-color: #91c0c7;
    border: none;
    color: #fff;
    text-transform: uppercase;
    cursor: pointer;
    font-family: 'Lora', sans-serif;
    font-size: 16px;
    transition: all .3s ease-in-out;
    border-radius: 0px;
    margin-top: 30px;
    padding: 15px 25px;
    display: inline-block;
}

.btn:hover {
    outline: 2px solid #91c0c7;
    color: #333;
    border: 0;
    outline-offset: -3px;
    box-shadow: none;
    text-decoration: none;
}

/* Quote */

#quote {
    background: linear-gradient(rgba(0,0,0, 0.0) 0%,rgba(0,0,0, 1) 100%), url('../img/quote-bg.jpeg');
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
}

#quote blockquote {
    margin-bottom: 30px;
}

#quote blockquote:before {
    color: #91c0c7;
}

#quote blockquote h2 {
    margin-bottom: 7px;
    font-family: 'Lora', serif;
}

/* Contactos */

#contactos .container {
    max-width: 500px;
}

#contactos .flexbox {
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

#contactos .flexbox > p {
    width: 100%;
}

/* Alojamento */
.housing-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.alojamento {
    padding: 10px;
    display: flex;
    flex-direction: column;
}

.imagem-container {
    position: relative;
    width: 375px; /* Definimos a largura fixa */
    height: 280px; /* Definimos a altura fixa */
    margin: auto; /* Centralizamos a imagem */
}

.imagem-container img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* Garante que a imagem cubra todo o espaço, cortando ou esticando conforme necessário */
    display: block;
}

.nome {
    position: absolute;
    top: 10px; /* Posiciona o nome no canto superior */
    left: 10px; /* Posiciona o nome no canto esquerdo */
    color: rgb(127, 187, 163); /* Cor do nome */
    background: rgba(0, 0, 0, 0.5);
    padding: 5px 10px;
    font-size: 1.2em;
    text-align: center;
    font-size: 16px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 800;
}

.nome a {
    text-decoration: none;
}

.detalhes {
    flex: 1;
}

.morada, .distance {
    margin-bottom: 10px;
}

.mapa iframe {
    width: 100%;
    height: 200px;
    border: none;
}

@media (min-width: 768px) {
    .alojamento {
        flex-direction: row;
        align-items: flex-start;
    }

    .imagem-container {
        margin-right: 50px; /* Aumentamos a margem lateral direita da imagem */
        margin-bottom: 0;
    }

    .detalhes {
        flex: 1;
    }

    .nome {
        position: static;
        transform: none;
        background: none;
        padding: 0;
        margin-bottom: 10px;
        text-align: left; 
        color: rgb(55, 104, 120);
    }

    .morada, .distance {
        margin-bottom: 20px; /* Aumentamos a margem entre a morada e o mapa */
    }
}

@media (max-width: 440px) {
    .imagem-container {
        width: 100%;
    }
}

/*  */

.text-ornament.subtitle {
    background-size: 1300px;
    font-size: 20px;
    margin-top: 50px;
    background-image: url(../img/ornaments/serenity/bgname.png);
}

.celebrate h4 {
    text-align: center;
    margin: 0;
}

.card-letter {
    font-size: 26px;
    white-space: nowrap;
    margin: 47px 0;
}

.card-title {
    font-size: 45px;
    text-transform: uppercase;
    margin-bottom: 60px;
}

.grooms-name {
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-font-smoothing: antialiased;
    box-sizing: border-box;
    line-height: 1.1;
    font-size: 30px;
    letter-spacing: 1.2px;
    margin: 30px 0px;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    font-weight: 800;
    padding: 15px;
    color: #fff;
    text-shadow: 0px 1px 9px rgba(102, 98, 98, 0.36);
    background-repeat: no-repeat;
    background-position: center;
    background-image: url(../img/ornaments/serenity/bgname.png);
}

@media (max-width: 600px) {
    .text-ornament.subtitle {
        background-image: url(../img/ornaments/serenity/bgname.png);
        margin-top: 10px;
        font-size: 13px;
    }

    .grooms-name {
        font-size: 22px;
        padding: 9px;
        margin: 8px 8px;
    }

    .queridos-convidados-body {
        flex-wrap: nowrap;
    }

    .couple-person {
        flex-basis: 50%;
    }

    #about .img-container {
        height: 125px;
        width: 125px;
    }

    .invite-text {
        margin: 0;
        width: 100%;
        max-width: none;
        min-width: 0;
        padding: 0;
        font-size: 18px;
    }

    .cerimony-text {
        background: #f2f7ff;
        padding: 20px;
        color: #376878;
    }
}

/* O Evento */

.celebrate-box {
    background: #fff;
    padding: 20px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    margin: 20px 0;
    transform: rotate(-4deg); /* Adiciona rotação */
    box-shadow: 0 3px 6px rgba(0, 0, 0, .25); /* Sombra */
    border: 8px solid #fff; /* Borda */
}

.celebrate-box h4 {
    margin-bottom: 15px;
    font-size: 24px;
    color: #376878;
}

.celebrate-box .event-details {
    font-size: 16px;
    color: #555;
    line-height: 1.5;
}

.celebrate-box .event-details strong {
    font-weight: 700;
    color: #376878;
}

.img-photo {
    margin-bottom: 20px; /* Garantir espaço suficiente entre a imagem e o mapa */
}

iframe {
    margin-top: 20px; /* Garantir espaço suficiente entre a imagem e o mapa */
}

/* Ajustes de layout responsivo */
@media (max-width: 767px) {
    .row.d-flex {
        display: flex !important;
        flex-direction: column-reverse !important;
    }

    .celebrate-box {
        margin: 20px auto;
    }

    iframe {
        padding: 0 10px; /* Adiciona padding nas laterais do iframe para dispositivos móveis */
        box-sizing: border-box; /* Garante que o padding seja incluído na largura total */
    }
}

/* Adicionar margem superior na seção Copo de Água */
.mt-5 {
    margin-top: 5rem !important;
}

